fix: stabilize service orchestration and implement idempotent database seeding
- Resolved JDBC connection race conditions by optimizing HikariCP
  initialization and container healthcheck strategies.
- Decoupled database schema state from container lifecycle using
  persistent Docker volumes.
- Implemented automated data bootstrapping via docker-entrypoint-initdb
  to ensure environment parity across deployments.
- Finalized full-stack integration between Spring Boot and MySQL
  services.