@@ -1,7 +1,8 @@
 package com.santiago.coronado.academic_administration.infrastructure.adapter.in.rest.controller;
 
 import com.santiago.coronado.academic_administration.application.usecase.GradeUseCase;
-import com.santiago.coronado.academic_administration.infrastructure.adapter.in.rest.dto.GradeDTO;
+import com.santiago.coronado.academic_administration.infrastructure.adapter.in.rest.dto.GradeRequestDTO;
+import com.santiago.coronado.academic_administration.infrastructure.adapter.in.rest.dto.GradeResponseDTO;
 import com.santiago.coronado.academic_administration.infrastructure.adapter.in.rest.mapper.GradeRestMapper;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -23,23 +24,36 @@ public class GradeController {
     private final GradeRestMapper gradeMapper;
 
     @PostMapping
-    @Operation(summary = "Registrar una nota", description = "Valida que la nota esté en el rango de 0.0 a 5.0.")
-    public ResponseEntity<GradeDTO> register(@RequestBody GradeDTO dto) {
-        var domain = gradeUseCase.registerGrade(gradeMapper.toDomain(dto));
-        return new ResponseEntity<>(gradeMapper.toDTO(domain), HttpStatus.CREATED);
+    @Operation(summary = "Registrar una nota")
+    public ResponseEntity<GradeResponseDTO> register(
+            @RequestBody GradeRequestDTO dto,
+            @RequestParam String studentId,
+            @RequestParam String subjectId
+    ) {
+
+        var domain = gradeUseCase.registerGrade(
+                dto.getValue(),
+                dto.getDescription(),
+                studentId,
+                subjectId
+        );
+
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(gradeMapper.toDTO(domain));
     }
+
 
     @GetMapping("/student/{studentId}/subject/{subjectId}")
     @Operation(summary = "Consultar historial de notas", description = "Retorna todas las notas de un estudiante en una materia específica.")
-    public ResponseEntity<List<GradeDTO>> getGrades(
+    public ResponseEntity<List<GradeResponseDTO>> getGrades(
             @PathVariable String studentId,
             @PathVariable String subjectId) {
 
-        var grades = gradeUseCase.getGradesByStudentAndSubject(studentId, subjectId)
+        List<GradeResponseDTO> response = gradeUseCase.getGradesByStudentAndSubject(studentId, subjectId)
                 .stream()
                 .map(gradeMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
 
-        return ResponseEntity.ok(grades);
+        return response.isEmpty() ? ResponseEntity.noContent().build() : ResponseEntity.ok(response);
     }
 }
